# slack_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SlackAttendanceBackend.postman_collection.json  SlackAttendanceBackend_Postman_Collection.json  backend_test.sh  docker-compose.yml  mysql_setup.sh  run_tests.sh  setup.sh  setup_backend.sh  test_backend.sh
migrations/: 20240101_init_schema.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs  queries.rs
src/routes/: attendance.rs  auth.rs  mod.rs  report.rs  slack.rs
src/services/: attendance_service.rs  mod.rs  report_service.rs  slack_service.rs
src/utils/: attendance.rs  auth.rs  mod.rs  report.rs  slack_validator.rs
tests/: integration_tests.rs
